--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -22,6 +22,7 @@
 
 html, body {
     overflow-x: hidden;
+    block-size: 100%;
 }
 
 body {
