--- a/scss/layouts/_about.scss
+++ b/scss/layouts/_about.scss
@@ -36,7 +36,7 @@
 
     & > p {
         &:not(:last-of-type) { margin-block-end: 1.5rem; }
-        &:last-of-type { margin-block-end: 3.5rem; }
+        &:last-of-type { margin-block-end: 2rem; }
     }
 
 }
