--- a/scss/modules/_overlay.scss
+++ b/scss/modules/_overlay.scss
@@ -5,6 +5,5 @@
     position: fixed;
     z-index: 100;
     inset: 0;
-    background-color: clr(neutral, darker, 0.75);
     backdrop-filter: blur(0.5rem);
 }
